--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,11 +6,33 @@
     android:layout_height="match_parent"
     tools:context="kupchinskii.ruslan.screenup.MainActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
+
+
     <CheckBox
+        android:id="@+id/cbStart"
+        android:layout_margin="4dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="screen on"
         android:onClick="onClick"
         />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+
+    <Button android:layout_margin="4dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onClickBack"
+        android:text="exit"
+        />
+
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
